adding nav aside

--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 /* ===== BARRE DE MENU ===== */
 
-#titre{/* bloc titre de page */
+/* identifiant titre de page dans le menu */
+#titre{
     transform: rotate(-10deg);
     margin: 10px;
     margin-right: 70px;
 }
 
-#bandeau{ /* bloc conteneur */
-  background-image:linear-gradient(30deg,rgb(102,153,204,0.9),rgba(153,102,102,0.9));/* couleur
+/* conteneur bandeau de menu */
+#bandeau{
+  background-image:linear-gradient(40deg,rgb(204,229,255,0.9),rgba(255,204,204,0.9));/* couleur
   de font dégradée avec opacité */
   top: 0%; /* positionne le menu par rapport au haut de page */
   width: 100%; /* force le background a occuper toute la largeur et pas uniquement
@@ -16,16 +18,31 @@
   display: flex;
 }
 
-nav{ /* bloc menu */
+/* conteneur de menu */
+nav{
   display: flex;
   justify-content: center;
 }
 
-nav a{ /* liens du menu */
+/* liens de menu */
+nav a{
   font-family: Arial, Verdana, "Trebuchet MS";
   font-size:1.3em;
   text-decoration: none; /* enleve le soulignement des liens du menu */
-  color: white;
+  color: rgb(153,102,102);
+}
+
+aside nav{
+    font-family: Arial, Verdana, "Trebuchet MS";
+    font-size: 0.9em;
+    text-align: justify;
+    text-decoration: none; /* enleve le soulignement des liens du menu */
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    margin-top: 8%;
+    margin-left: 2%;
+    margin-right: 70%;
 }
 
 nav a:hover{ /* liens du menu au survol */
@@ -44,6 +61,7 @@ nav a:hover{ /* liens du menu au survol */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  
   position: relative;
   height: 300px;
 }
@@ -73,8 +91,8 @@ h3{/* titres paragraphes */
   font-size: 1.7em;
   margin-top: 40px;
   font-family: Arial, Verdana, "Trebuchet MS";
-  color: rgb(102,153,204);
-  border-bottom: 1px solid rgb(102,153,204);
+  color: rgb(0,153,153);
+  border-bottom: 1px solid rgb(0,153,153);
 }
 
 h3::before{/* compteur de titre */
@@ -87,7 +105,7 @@ h4{ /* sous-titres paragraphes */
   font-style: italic;
   margin-top: 40px;
   font-family: Arial, Verdana, "Trebuchet MS";
-  color: rgb(102,153,204);
+  color: rgb(0,153,153);
 }
 
 /* ===== PRINCIPALES BALISES ===== */
@@ -97,7 +115,7 @@ body{
 }
 
 header{ /* entête */
-  margin-top: 110px;
+  margin-top: 100px;
 }
 
 footer{ /* pied de page */
@@ -162,9 +180,12 @@ ol{ /* Listes */
   font-size: 1.2em;
 }
 
+
 #principal{ /* le corps du document sans le menu et le header */
-  width: 70%;
-  margin: auto; /* pour centrer le document */
+  /*width: 70%;*/
+  margin-right: 10%;
+  margin-left: 30%;
+  /*margin: auto; /* pour centrer le document */
 }
 
 .legendeCode{/* légende des lignes de code */
