--- a/style.css
+++ b/style.css
@@ -1,11 +1,26 @@
-/* ===== BARRE DE MENU ===== */
+/*
+###################################################################
+# header                                                          #
+###################################################################
 
-/* identifiant titre de page dans le menu */
-#titre{
-    transform: rotate(-10deg);
-    margin: 10px;
-    margin-right: 70px;
-}
+===================================================================
+= bandeau                                                         =
+= ................ .............................................. =
+= . h1           . . nav                                        . =
+= ................ .............................................. =
+===================================================================
+
+================== ================================================
+= aside          = = principal                                    =
+= ================ ================================================
+
+###################################################################
+# footer                                                          #
+###################################################################
+*/
+
+
+/* ===== BARRE DE MENU ===== */
 
 /* conteneur bandeau de menu */
 #bandeau{
@@ -14,8 +29,18 @@
   top: 0%; /* positionne le menu par rapport au haut de page */
   width: 100%; /* force le background a occuper toute la largeur et pas uniquement
   ou se trouve le texte */
-  position: fixed;
   display: flex;
+  flex-direction: row; /* crée le menu horizontalement */
+  position: fixed; /* empêche le déroulement du menu avec la souris */
+}
+
+/* titre de page dans le menu */
+h1{
+  font-family: "Comic Sans MS", Arial, Verdana, "Trebuchet MS";
+  color: rgb(153,102,102);
+  transform: rotate(-10deg);
+  margin: 15px;
+  margin-right: 20px;
 }
 
 /* conteneur de menu */
@@ -32,27 +57,31 @@ nav a{
   color: rgb(51,153,255);
 }
 
+/* comportement des liens du menu au survol */
+nav a:hover{
+  font-weight: bold;
+  color: rgb(153,102,102);
+}
+
+/* ====== ASIDE ======= */
+
+/* conteneur de menu */
 aside nav{
     font-family: Arial, Verdana, "Trebuchet MS";
     font-size: 0.9em;
     text-align: justify;
     text-decoration: none; /* enleve le soulignement des liens du menu */
-
     display: flex;
-    flex-direction: column;
-    position: fixed;
-    margin-top: 8%;
+    flex-direction: column; /* crée le menu verticalement */
+    position: fixed; /* empêche le déroulement du menu avec la souris */
     margin-left: 2%;
     margin-right: 70%;
+    padding-right: 2%;
 }
 
+/* liens du menu */
 aside nav a{
     color: rgb(153,102,102);
-}
-
-nav a:hover{ /* liens du menu au survol */
-  font-weight: bold;
-  color: rgb(153,102,102);
 }
 
 .element{ /* classe élément de menu */
@@ -60,8 +89,8 @@ nav a:hover{ /* liens du menu au survol */
   margin-top: 40px;
 }
 
-/* Image défilante avec texte à l'intérieur */
-.heroImage{ /* image dans laquelle on veut insérer des propriétés de texte */
+/* Image défilante avec texte à l'intérieur
+.heroImage{  image dans laquelle on veut insérer des propriétés de texte
   background-image: url("fondTitre.jpg");
   background-position: center;
   background-repeat: no-repeat;
@@ -71,41 +100,32 @@ nav a:hover{ /* liens du menu au survol */
   height: 300px;
 }
 
-.heroTexte{ /* affiche le texte au milieu, horizontalement et verticalement */
+.heroTexte{  affiche le texte au milieu, horizontalement et verticalement
   text-align: center;
   position: absolute;
   top: 50%;
   left: 80%;
   transform: translate(-50%, -50%);
-}
+}*/
 
 /* ===== TITRES ===== */
 
-h1{ /* titre principal */
-  font-family: "Comic Sans MS", Arial, Verdana, "Trebuchet MS";
-  color: rgb(153,102,102);
-}
-
-h2{ /* titre document */
-  font-family: Arial, Verdana, "Trebuchet MS";
-  color: rgb(51,153,255);
-  font-size: 3em;
-}
-
-h3{/* titres paragraphes */
+h2{ /* titre de section */
   font-size: 1.7em;
   margin-top: 40px;
   font-family: Arial, Verdana, "Trebuchet MS";
   color: rgb(51,153,255);
-  border-bottom: 1px solid rgb(0,153,153);
+  border-bottom: 1px solid rgb(51,153,255);
 }
 
-h3::before{/* compteur de titre */
+/* compteur de titre */
+h2::before{
   counter-increment: compteur_titre;
   content: counter(compteur_titre) ". ";
 }
 
-h4{ /* sous-titres paragraphes */
+/* titres de sous-sections */
+h3{
   font-size: 1.2em;
   font-style: italic;
   margin-top: 40px;
@@ -115,30 +135,43 @@ h4{ /* sous-titres paragraphes */
 
 /* ===== PRINCIPALES BALISES ===== */
 
+/* corps du site */
 body{
   counter-reset: compteur_titre;
 }
 
-header{ /* entête */
-  margin-top: 100px;
+/* identifiant de section principale */
+#principal{
+  margin-top:8%;
+  margin-right: 10%;
+  margin-left: 30%;
+  /*margin: auto; /* pour centrer le document */
 }
 
-footer{ /* pied de page */
-  font-family: Arial, Verdana, "Trebuchet MS";
-  font-size: 0.9em;
-  color: #828786;
-  text-align: center;
+/* pied de page */
+footer{
   height: 20%;
   margin: 20px;
+  margin-left: 30%;
 }
 
-p{ /* paragraphes */
+/* texte de pied de page */
+footer p{
+    font-family: Arial, Verdana, "Trebuchet MS";
+    font-size: 0.9em;
+    color: #828786;
+    text-align: center;
+}
+
+/* paragraphes */
+p{
   font-family: Arial, Verdana, "Trebuchet MS";
   font-size: 1.2em;
   text-align: justify;
 }
 
-.pcle{ /*paragraphes de mots-clés */
+/* classe de paragraphes de mots-clés */
+.pcle{
   width: 80%;
   margin: auto;
   color: rgb(153,102,102);
@@ -148,57 +181,46 @@ p{ /* paragraphes */
   font-style: italic;
 }
 
-strong{ /* mise en valeur */
+/* texte mis en valeur */
+strong{
   font-weight: bold;
 }
 
-figure{ /* figure */
+/* figure */
+figure{
   text-align: center;
 }
 
-fieldset{ /* cadre avec titre */
+/* encadrement avec titre */
+fieldset{
   width: 70%;
   margin: auto;
   border: 2px rgb(153,102,102) solid;
   border-radius: 10px;
   box-shadow: 1px 8px 12px #555;
-  padding-bottom:0px;
-  padding-top:0px;
   margin-bottom:30px;
 }
 
-
-
-ul{ /* Listes */
+/* listes */
+ul{
   font-family: Arial, Verdana, "Trebuchet MS";
   font-size: 1.2em;
   list-style-image: url('puce.png');
 }
 
-ol{ /* Listes */
+/* élément de listes */
+ol{
   font-family: Arial, Verdana, "Trebuchet MS";
   font-size: 1.2em;
 }
 
-
-#principal{ /* le corps du document sans le menu et le header */
-  /*width: 70%;*/
-  margin-top:8%;
-  margin-right: 10%;
-  margin-left: 30%;
-  /*margin: auto; /* pour centrer le document */
-}
-
-.legendeCode{/* légende des lignes de code */
+/* classe de légende des lignes de code */
+.legendeCode{
   font-size:0.8em;
   color: #807070;
   text-align: right;
   margin-top: 5px;
   height:30px;
-}
-
-legend{
-  color: rgb(153,102,102);
 }
 
 .ulExemple{
@@ -227,12 +249,13 @@ legend{
   margin-left:0px;
 }
 
-/* ===== LIENS ===== */
+/* liens dans le texte */
 a{
   color: black;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
+/* comportement des liens dans le texte au survol */
 a:hover{
   font-weight: bold;
   color: rgb(153,102,102);
@@ -240,29 +263,31 @@ a:hover{
 
 /* ===== TABLEAUX ===== */
 
+/* tableaux */
 table{
   font-family: Arial, Verdana, "Trebuchet MS";
   font-size: 1.2em;
   border-collapse: collapse; /* colle les cellules du tableau entre elles */
 }
 
+/* colonnes */
 td{
-  border: 1px solid rgb(153,102,102);
-}
-
-td, th{
   font-family: Arial, Verdana, "Trebuchet MS";
   padding-left: 30px;
   border: 1px solid rgb(153,102,102);
 }
 
+/* colonnes dans lesquelles se trouvent du code */
 td pre{
   font-size:0.8em;
 }
 
-/* ===== LES CLASSES UTILISEES ===== */
-
-
+/* colonnes dans la 1ère ligne */
+th{
+  font-family: Arial, Verdana, "Trebuchet MS";
+  padding-left: 30px;
+  border: 1px solid rgb(153,102,102);
+}
 
 /* ===== LES MISES EN FORMES POUR EXEMPLES ===== */
 /* Ces mises en forme ne sont pas utilisées pour l'ensemble de la page, mais
@@ -276,7 +301,6 @@ uniquement pour l'affichage de certains exemples */
 .exempleBloc:nth-child(3){
   background-color: #33A9CC;
 }
-
 #exempleBloc10-1{
   background-color: #CF6084;
 }
@@ -287,7 +311,6 @@ uniquement pour l'affichage de certains exemples */
   background-color: #33A9CC;
   align-self: flex-end;
 }
-
 #exempleBloc11-1{
   background-color: #CF6084;
   order: 2;
@@ -300,7 +323,6 @@ uniquement pour l'affichage de certains exemples */
   background-color: #33A9CC;
   order: 3;
 }
-
 #exempleBloc12-1{
   background-color: #CF6084;
   flex: 1;
@@ -311,7 +333,6 @@ uniquement pour l'affichage de certains exemples */
 #exempleBloc12-3{
   background-color: #33A9CC;
 }
-
 #exempleBloc13-1{
   background-color: #CF6084;
   flex: 2;
@@ -323,7 +344,6 @@ uniquement pour l'affichage de certains exemples */
 #exempleBloc13-3{
   background-color: #33A9CC;
 }
-
 #exempleConteneur1{
   border: 1px black dotted;
   display: flex;
@@ -375,7 +395,7 @@ uniquement pour l'affichage de certains exemples */
   display: flex;
   flex-direction: column-reverse;
 }
-#exempleConteneur10{
+.exempleConteneur10{
   border: 1px black dotted;
   display: flex;
   flex-direction: row;
@@ -383,12 +403,11 @@ uniquement pour l'affichage de certains exemples */
   align-items: center;
   height: 100px;
 }
-#exempleConteneur12{
+.exempleConteneur12{
   border: 1px black dotted;
   display: flex;
   flex-direction: row;
 }
-
 #blocIndependant{ /* exemple html "la notion de bloc" */
   background-color: #33A9CC;
 }
