--- a/style.css
+++ b/style.css
@@ -63,6 +63,12 @@ nav a:hover{
   color: rgb(153,102,102);
 }
 
+/* classe élément de menu */
+.element{
+  margin: 15px;
+  margin-top: 30px;
+}
+
 /* ====== ASIDE ======= */
 
 /* conteneur de menu */
@@ -83,30 +89,6 @@ aside nav{
 aside nav a{
     color: rgb(153,102,102);
 }
-
-.element{ /* classe élément de menu */
-  margin: 15px;
-  margin-top: 40px;
-}
-
-/* Image défilante avec texte à l'intérieur
-.heroImage{  image dans laquelle on veut insérer des propriétés de texte
-  background-image: url("fondTitre.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  position: relative;
-  height: 300px;
-}
-
-.heroTexte{  affiche le texte au milieu, horizontalement et verticalement
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 80%;
-  transform: translate(-50%, -50%);
-}*/
 
 /* ===== TITRES ===== */
 
@@ -142,7 +124,7 @@ body{
 
 /* identifiant de section principale */
 #principal{
-  margin-top:8%;
+  margin-top:6.7%;
   margin-right: 10%;
   margin-left: 30%;
   /*margin: auto; /* pour centrer le document */
