--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ aside nav a{
 h2{ /* titre de section */
   font-size: 1.7em;
   margin-top: 40px;
+  padding-top: 70px;
   font-family: Arial, Verdana, "Trebuchet MS";
   color: rgb(51,153,255);
   border-bottom: 1px solid rgb(51,153,255);
@@ -124,7 +125,7 @@ body{
 
 /* identifiant de section principale */
 #principal{
-  margin-top:6.7%;
+  margin-top:5.5%;
   margin-right: 10%;
   margin-left: 30%;
   /*margin: auto; /* pour centrer le document */
@@ -150,6 +151,10 @@ p{
   font-family: Arial, Verdana, "Trebuchet MS";
   font-size: 1.2em;
   text-align: justify;
+}
+
+.ancre{
+    margin: 10%;
 }
 
 /* classe de paragraphes de mots-clés */
