--- a/style.css
+++ b/style.css
@@ -110,6 +110,13 @@ h2::before{
 /* titres de sous-sections */
 h3{
   font-size: 1.2em;
+  margin-top: 40px;
+  font-family: Arial, Verdana, "Trebuchet MS";
+  color: rgb(51,153,255);
+}
+
+h4{
+  font-size: 1.2em;
   font-style: italic;
   margin-top: 40px;
   font-family: Arial, Verdana, "Trebuchet MS";
