--- a/style/style.css
+++ b/style/style.css
@@ -100,6 +100,9 @@ aside nav a{
 
 /* ===== TITRES ===== */
 
+img{
+    margin-left: 200px;}
+
 h2{ /* titre de section */
   font-size: 1.7em;
   padding-top: 40px;
