--- a/style/style.css
+++ b/style/style.css
@@ -1,64 +1,51 @@
-/*
-###################################################################
-# header                                                          #
-###################################################################
-
-===================================================================
-= bandeau                                                         =
-= ................ .............................................. =
-= . h1           . . nav                                        . =
-= ................ .............................................. =
-===================================================================
-
-================== ================================================
-= aside          = = principal                                    =
-= ================ ================================================
-
-###################################################################
-# footer                                                          #
-###################################################################
-*/
-
-
-/* header */
-header{
-  background-color: #999966;
-}
+/* ================================
+                HEADER
+   ================================ */
 
 #header_haut{
+  background-color: #999966;
   display: flex;
-    align-items: left;
-    justify-content: left;
+  flex-direction: row;
+  justify-content: left;
 }
 
 #imageGauche_header{
-    margin-top: 2%;
-    margin-left: 10%;
-    margin-bottom: -2%;
+  margin-top: 2%;
+  margin-left: 8%;
+  margin-bottom: -2%;
 }
 
-#imageDroite_header{
-    margin-top: 1%;
-    margin-left: 1%;
-    margin-bottom: 1%;
-}
-
-/* titre de page */
+/* titre principal (titre du site, titre de page et motto) */
 h1{
-  font-family: Cambria, Verdana, Arial;
-  text-align: center;
-  color: rgb(41, 61, 61); /*rgb(153,102,102);*/
-  margin: 2%;
-  margin-left:30%;
+  font-family: Arial, Cambria, Verdana;
+  color: rgb(41, 61, 61);
 }
 
-/* ===== BARRE DE MENU ===== */
+/* titre de site, identifiant hérite de h1 */
+#titreSite{
+  margin-left:5%;
+  margin-top: 4%;
+  margin-bottom: -1%;
+}
 
-/* conteneur bandeau de menu */
+/* titre de page, identifiant hérite de h1 */
+#titrePage{
+  font-family: Cambria, Verdana, Arial;
+  font-size: 2em;
+  margin-left: 40%;
+}
+
+/* phrase dans le header_haut, identifiant hérite de h1 */
+#motto{
+  font-size: 1.3em;
+  margin-left: 30%;
+  margin-top: 5%;
+}
+
+/* conteneur du menu, identifiant hérite de nav */
 #bandeau{
   background-image:linear-gradient(40deg, rgba(0, 153, 204, 0.9),rgba(255,204,204,0.9));/* couleur
   de font dégradée avec opacité */
-  /*top: 0%; /* positionne le menu par rapport au haut de page */
   width: 100%; /* force le background a occuper toute la largeur et pas uniquement
   ou se trouve le texte */
   display: flex;
@@ -66,32 +53,9 @@ h1{
   justify-content: center;
 }
 
-
-/* conteneur de menu */
-nav{
-  display: flex;
-  flex-direction: row;
-}
-
-/* liens de menu */
-nav a{
-  font-family: Cambria, Verdana, Arial;
-  font-size:1.3em;
-  text-decoration: none; /* enleve le soulignement des liens du menu */
-  color: rgb(41, 61, 61);/*rgb(51,153,255);*/
-}
-
-/* comportement des liens du menu au survol */
-nav a:hover{
-  font-weight: bold;
-  color: rgb(153,102,102);
-}
-
-/* classe élément de menu */
-.element{
-  margin: 15px;
-  margin-left: 40px;
-}
+/* =================================
+          PRINCIPAL
+   ================================= "/
 
 /* ====== ASIDE ======= */
 
@@ -103,6 +67,9 @@ nav a:hover{
       margin: 4%;
 }
 
+aside{
+  margin: 1%;
+}
 
 /* conteneur de menu */
 aside nav{
@@ -112,19 +79,20 @@ aside nav{
     text-decoration: none; /* enleve le soulignement des liens du menu */
     display: flex;
     flex-direction: column; /* crée le menu verticalement */
-    position: fixed; /* empêche le déroulement du menu avec la souris */
+
 
 }
 
 #table_matieres{
-    margin-left: 2%;
-    margin-right: 70%;
-    padding-right: 2%;
+  width: 20%;
+  margin: 1%;
 }
 
 #chapitres{
-    margin-left: 92%;
-    margin-top: 10%;
+  width: 10%;
+  margin: 2%;
+  margin-left: 90%;
+  position: fixed; /* empêche le déroulement du menu avec la souris */
 }
 
 /* liens du menu */
@@ -168,6 +136,27 @@ h4{
   color: rgb(51,153,255);
 }
 
+/* liens */
+nav a{
+  font-family: Cambria, Verdana, Arial;
+  font-size:1.3em;
+  text-decoration: none; /* enleve le soulignement des liens du menu */
+  color: rgb(41, 61, 61);
+}
+
+/* comportement des liens au survol */
+nav a:hover{
+  font-weight: bold;
+  color: rgb(153,102,102);
+}
+
+/* classe hérite de <a> */
+.element{
+  margin: 15px;
+  margin-left: 40px;
+}
+
+
 /* ===== PRINCIPALES BALISES ===== */
 
 /* corps du site */
@@ -175,28 +164,79 @@ body{
   counter-reset: compteur_titre;
 }
 
-/* identifiant de section principale */
 #principal{
-  margin-top:5.5%;
-  margin-right: 10%;
-  margin-left: 30%;
-  /*margin: auto; /* pour centrer le document */
+  display: flex;
+  flex-direction: row;
 }
 
-/* pied de page */
-footer{
-  height: 40%;
-  
-  background-color: #999966;
+/* identifiant de section principale */
+#contenu{
+  width: 65%;
+  margin: 1%;
 }
 
-/* texte de pied de page */
+
+
+/* texte de pied de balise */
 footer p{
     font-family: Cambria, Verdana, Arial;
     font-size: 0.9em;
     color: #828786;
     text-align: center;
 }
+
+.footerColumn{
+  font-family: Cambria, Verdana, Arial;
+  /*text-align: justify;*/
+  text-decoration: none; /* enleve le soulignement des liens du menu */
+  display: flex;
+  flex-direction: column; /* crée le menu verticalement */
+  margin-left: 3%;
+  width: 15%;
+}
+
+.largeFooterColumn{
+  font-family: Cambria, Verdana, Arial;
+  /*text-align: justify;*/
+  text-decoration: none; /* enleve le soulignement des liens du menu */
+  display: flex;
+  flex-direction: column; /* crée le menu verticalement */
+  margin-left: 3%;
+  width: 40%;
+}
+
+.footerNav{
+  display: flex;
+  flex-direction: column; /* crée le menu verticalement */
+  font-size: 1.1em;
+}
+
+/* pied de page, classe hérite de footer */
+.piedPage{
+  height: 60%;
+  background-color: #999966;
+  display: flex;
+  flex-direction: row;
+}
+
+.piedPageParagraphe{
+  font-family: Cambria, Verdana, Arial;
+  font-size: 1.1em;
+  color: rgb(41, 61, 61);
+  text-align: left;
+  margin-top:0%;
+}
+
+.piedPageTitre{
+  font-family: Cambria, Verdana, Arial;
+  font-size: 1.1em;
+  font-style: italic;
+  color: rgb(41, 61, 61);
+  text-align: left;
+}
+
+
+
 
 /* paragraphes */
 p{
@@ -241,15 +281,12 @@ fieldset{
 }
 
 fieldset2{
-
   width: 50px;
-
-
-  padding: 10px;
   border: 2px rgb(153,102,102) solid;
   border-radius: 10px;
   box-shadow: 1px 8px 12px #555;
-
+  padding-left: 5px;
+  padding-top: 5px;
 }
 
 /* listes */
