--- a/style/style.css
+++ b/style/style.css
@@ -1,63 +1,55 @@
-/* ================================
-                HEADER
-   ================================ */
+/* === BODY === */
 
-#header_haut{
-  background-color: #999966;
+body{
+  counter-reset: compteur_titre;
+}
+
+/* === HEADER === */
+
+header{
+  /* couleur de fond dégradée avec opacité */
+  background-image:linear-gradient(90deg, #0086b3, #ff8000);
+  /* force le background a occuper toute la largeur et pas uniquement
+     ou se trouve le texte */
+  width: 100%;
   display: flex;
   flex-direction: row;
-  justify-content: left;
-}
-
-#imageGauche_header{
-  margin-top: 2%;
-  margin-left: 8%;
-  margin-bottom: -2%;
-}
-
-/* titre principal (titre du site, titre de page et motto) */
-h1{
-  font-family: Arial, Cambria, Verdana;
-  color: rgb(41, 61, 61);
-}
-
-/* titre de site, identifiant hérite de h1 */
-#titreSite{
-  margin-left:5%;
-  margin-top: 4%;
-  margin-bottom: -1%;
-}
-
-/* titre de page, identifiant hérite de h1 */
-#titrePage{
-  font-family: Cambria, Verdana, Arial;
-  font-size: 2em;
-  margin-left: 40%;
-}
-
-/* phrase dans le header_haut, identifiant hérite de h1 */
-#motto{
-  font-size: 1.3em;
-  margin-left: 30%;
-  margin-top: 5%;
+  box-shadow: 6px 6px 5px #555;
 }
 
 /* conteneur du menu, identifiant hérite de nav */
-#bandeau{
-  background-image:linear-gradient(40deg, rgba(0, 153, 204, 0.9),rgba(255,204,204,0.9));/* couleur
-  de font dégradée avec opacité */
-  width: 100%; /* force le background a occuper toute la largeur et pas uniquement
-  ou se trouve le texte */
-  display: flex;
-  flex-direction: row; /* crée le menu horizontalement */
-  justify-content: center;
+header nav{
+  padding-top: 2%;
+  padding-left: 4%;
 }
+
+header nav a{
+  font-family: Arial, Cambria, Verdana;
+  font-size: 1em;
+  color: white;
+  text-decoration: none; /* enleve le soulignement des liens du menu */
+}
+
+
+
+/* liens dans le texte */
+a{
+  color: #0086b3;
+  text-decoration: none;
+}
+
+/* comportement des liens dans le texte au survol */
+a:hover{
+  font-weight: bold;
+  color: #ff8000;
+}
+
 
 /* =================================
           PRINCIPAL
    ================================= "/
 
-/* ====== ASIDE ======= */
+
 
 /* logo de menu */
 
@@ -67,20 +59,25 @@ h1{
       margin: 4%;
 }
 
+/* === ASIDE === /*
+
 aside{
   margin: 1%;
 }
 
-/* conteneur de menu */
+/* conteneur de la table des matières */
 aside nav{
-    font-family: Cambria, Verdana, Arial;
-    font-size: 0.9em;
-    text-align: justify;
-    text-decoration: none; /* enleve le soulignement des liens du menu */
-    display: flex;
-    flex-direction: column; /* crée le menu verticalement */
+  font-family: Cambria, Verdana, Arial;
+  font-size: 0.9em;
+  text-align: justify;
+  text-decoration: none; /* enleve le soulignement des liens du menu */
+  display: flex;
+  flex-direction: column; /* crée le menu verticalement */
+}
 
-
+/* liens de la table des matières */
+aside nav a{
+  color: #2e2e1f;
 }
 
 #table_matieres{
@@ -95,18 +92,29 @@ aside nav{
   position: fixed; /* empêche le déroulement du menu avec la souris */
 }
 
-/* liens du menu */
-aside nav a{
-    color: rgb(153,102,102);
-}
 
 /* ===== TITRES ===== */
 
-img{
-    /*margin-left: 200px;*/
+/* titre du site */
+h1{
+  font-family: Arial, Cambria, Verdana;
+  font-size: 2em;
+  color: white;
+  text-shadow: 2px 2px #555;
+  margin: 1%;
+  margin-left: 2%;
 }
 
-h2{ /* titre de section */
+/* titre de page */
+h2{
+  font-family: Cambria, Verdana, Arial;
+  font-size: 2em;
+  margin-left: 40%;
+  color: white;
+  text-shadow: 2px 2px #555;
+}
+
+h3{ /* titre de sections */
   font-size: 1.7em;
   padding-top: 40px;
   font-family: Cambria, Verdana, Arial;
@@ -115,20 +123,20 @@ h2{ /* titre de section */
 }
 
 /* compteur de titre */
-h2::before{
+h3::before{
   counter-increment: compteur_titre;
   content: counter(compteur_titre) ". ";
 }
 
 /* titres de sous-sections */
-h3{
+h4{
   font-size: 1.2em;
   margin-top: 40px;
   font-family: Cambria, Verdana, Arial;
   color: rgb(51,153,255);
 }
 
-h4{
+h5{
   font-size: 1.2em;
   font-style: italic;
   margin-top: 40px;
@@ -136,12 +144,13 @@ h4{
   color: rgb(51,153,255);
 }
 
-/* liens */
+/* === LIENS === */
+
 nav a{
   font-family: Cambria, Verdana, Arial;
   font-size:1.3em;
   text-decoration: none; /* enleve le soulignement des liens du menu */
-  color: rgb(41, 61, 61);
+  /*color: rgb(41, 61, 61);*/
 }
 
 /* comportement des liens au survol */
@@ -157,25 +166,48 @@ nav a:hover{
 }
 
 
-/* ===== PRINCIPALES BALISES ===== */
-
-/* corps du site */
-body{
-  counter-reset: compteur_titre;
-}
+/* === PRINCIPAL === */
 
 #principal{
+  background-image:linear-gradient(90deg, #00ace6, #ff9933);/* couleur
+  de font dégradée avec opacité */
+  width: 100%; /* force le background à occuper toute la largeur */
   display: flex;
   flex-direction: row;
 }
 
-/* identifiant de section principale */
-#contenu{
+#grandContenu{
+  display: flex;
+  flex-direction: column;
   width: 65%;
-  margin: 1%;
 }
 
+#bandeau_contenu{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  background-color: black;
+  opacity: 0.4;
+  width: 100%;
+  margin: 1%;
+  margin-bottom: -1%;
+  padding-left: 2%;
 
+}
+
+#bandeau_contenu p{
+  color: white;
+}
+
+/* section dans laquelle se trouve tout le contenu */
+#contenu{
+  border-radius: 10px;
+  box-shadow: 1px 8px 12px #555;
+  background-color: white;
+  width: 100%;
+  margin: 1%;
+  margin-top: 0%;
+  padding: 1%;
+}
 
 /* texte de pied de balise */
 footer p{
@@ -214,7 +246,7 @@ footer p{
 /* pied de page, classe hérite de footer */
 .piedPage{
   height: 60%;
-  background-color: #999966;
+  background-color: #2e2e1f;
   display: flex;
   flex-direction: row;
 }
@@ -222,7 +254,7 @@ footer p{
 .piedPageParagraphe{
   font-family: Cambria, Verdana, Arial;
   font-size: 1.1em;
-  color: rgb(41, 61, 61);
+  color: white;
   text-align: left;
   margin-top:0%;
 }
@@ -231,11 +263,9 @@ footer p{
   font-family: Cambria, Verdana, Arial;
   font-size: 1.1em;
   font-style: italic;
-  color: rgb(41, 61, 61);
+  color: #ff9933;
   text-align: left;
 }
-
-
 
 
 /* paragraphes */
@@ -337,17 +367,7 @@ ol{
   margin-left:0px;
 }
 
-/* liens dans le texte */
-a{
-  color: black;
-  text-decoration: none;
-}
 
-/* comportement des liens dans le texte au survol */
-a:hover{
-  font-weight: bold;
-  color: rgb(153,102,102);
-}
 
 /* ===== TABLEAUX ===== */
 
