work on html.html

--- a/style/style.css
+++ b/style/style.css
@@ -8,9 +8,10 @@ body{
 
 header{
   /* couleur de fond dégradée avec opacité */
-  background-image:linear-gradient(90deg, #0086b3, #ff8000);
+  /*background-image:linear-gradient(90deg, #004080, #ff8000);
   /* force le background a occuper toute la largeur et pas uniquement
      ou se trouve le texte */
+     background: linear-gradient(to left, #007a99, 10%, #660029, #e62e00);
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -183,8 +184,10 @@ h5{
 /* === PRINCIPAL === */
 
 #principal{
-  background-image:linear-gradient(90deg, #00ace6, #ff9933);/* couleur
+  /*background-image:linear-gradient(90deg, #0059b3, #ff9933);/* couleur
   de font dégradée avec opacité */
+  background: linear-gradient(200deg, #2e2e1f 50%, #99003d 20%, #ff471a);
+
   width: 100%; /* force le background à occuper toute la largeur */
   display: flex;
   flex-direction: row;
@@ -203,14 +206,11 @@ h5{
   opacity: 0.4;
   width: 100%;
   margin: 1%;
-
   padding-left: 2%;
-
 }
 
 #bandeau_contenu p{
   color: white;
-
 }
 
 #bandeau_sousTitre{
@@ -225,14 +225,15 @@ h5{
 
 /* section dans laquelle se trouve tout le contenu */
 #contenu{
-  border-radius: 10px;
+
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
   box-shadow: 1px 8px 12px #555;
   background-color: white;
   width: 100%;
   margin: 1%;
-  margin-top: -2%;
+  margin-top: -1%;
   padding: 1%;
-
 }
 
 /* texte de pied de balise */
